fix z-index

--- a/src/app/components/roles/control-panel/groups-manage/groups-manage.component.css
+++ b/src/app/components/roles/control-panel/groups-manage/groups-manage.component.css
@@ -1,36 +1,36 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Works for Firefox */
 input[type="number"] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 /* CSS */
 a {
-    text-decoration: none;
-    position: relative;
-  }
-  
-  a:hover::before {
-    width: 90px;
-    content: "Assign user to another group";
-    background-color: #333;
-    color: #fff;
-    padding: 5px;
-    border-radius: 3px;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-    transition: opacity 0.2s ease-in; 
-  }
-  
-  a:hover:hover::before {
-    opacity: 1;
-  }
-  
+  text-decoration: none;
+  position: relative;
+}
+
+a:hover::before {
+  width: 90px;
+  content: "Assign user to another group";
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 3px;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.2s ease-in;
+  z-index: 100;
+}
+
+a:hover:hover::before {
+  opacity: 1;
+}
